Bug 334866 - Tooltip on "Virual desktop" widget is buggy
Summary: Tooltip on "Virual desktop" widget is buggy
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Pager widget (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-16 10:17 UTC by Alexander Nestorov
Modified: 2014-05-16 14:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Nestorov 2014-05-16 10:17:26 UTC
See 1:48 https://www.youtube.com/watch?v=fZ8F6erz_eM&edit=vd

Reproducible: Always
Comment 1 Sebastian Kügler 2014-05-16 10:27:39 UTC
Seems to happen for one virtual desktop.
Comment 2 Marco Martin 2014-05-16 14:36:46 UTC
Git commit 6959076bace3285dc6c79aab270b78498b1dc3dd by Marco Martin.
Committed on 16/05/2014 at 14:35.
Pushed by mart into branch 'master'.

don't reset the desktop model when windows change

many less unneeded resets and items recreation
the broken tooltip was a curious sideeffect of it

M  +1    -1    applets/pager/plugin/pager.cpp

http://commits.kde.org/plasma-desktop/6959076bace3285dc6c79aab270b78498b1dc3dd