don't reset the desktop model when windows change

many less unneeded resets and items recreation
the broken tooltip was a curious sideeffect of it
BUG:334866